--- a/Multi-Family.html
+++ b/Multi-Family.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <style>
         .services-hero {
-            background: url('https://images.unsplash.com/photo-1507089947368-19c1da9775ae?auto=format&fit=crop&w=1200&q=80') center center/cover no-repeat;
+            background: url('images/IMG-20250711-WA0153.jpg') center center/cover no-repeat;
             min-height: 320px;
             position: relative;
             display: flex;
@@ -133,26 +133,26 @@
         </nav>
     </header>
 
-    <div class="services-hero">
+    <div class="bg-photo-overlay" style="background-image: url('images/IMG-20250711-WA0153.jpg');"">
         <div class="services-hero-content animate-zoom">
             <h1>Unlock NOI from Your Vacant Units</h1>
             <p>Premium STR integration that respects your asset, elevates your operations, and increases revenue—with no disruption.</p>
         </div>
     </div>
 
-    <main class="container">
-        <section style="margin-top:2.5rem;">
-            <h2 style="text-align:center; font-size:2rem; margin-bottom:1.5rem;" class="animate-slidein-down">Multifamily STR, Done Right</h2>
-            <p style="text-align:center; max-width:700px; margin:0 auto 2rem auto;" class="animate-fadein-up">
+    <main class="container bg-photo-overlay" style="background-image: url('images/IMG-20250711-WA0153.jpg');">
+        <section class="section-tight" style="margin-top:2.5rem; color: #fff;">
+            <h2 class="animate-slidein-down" style="color: #fff;">Multifamily STR, Done Right</h2>
+            <p class="animate-fadein-up" style="max-width:700px; margin:0 auto 2rem auto;">
                 Magnus &amp; Co. partners with multifamily owners and operators to turn idle units into fully managed short-term rentals.<br>
                 We don’t lease units—we integrate into your workflow with a system that protects your asset, supports your team, and drives NOI.
             </p>
         </section>
 
-        <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-pop">Why Owners Work With Us</h2>
-            <div class="section-list">
-                <ul class="animate-slidein-left">
+        <section class="section-tight" style="color: #fff;">
+            <h2 class="animate-pop" style="color: #fff;">Why Owners Work With Us</h2>
+            <div class="section-list transparent-bg" style="background: transparent; box-shadow: none;">
+                <ul class="animate-slidein-left" style="color: #fff;">
                     <li>Increase NOI within 60 days using idle units</li>
                     <li>No displacement, no disruption to tenants</li>
                     <li>Professionally screened guests, insured stays</li>
@@ -161,8 +161,8 @@
                     <li>Live dashboards and full transparency</li>
                     <li>Works with Class A, B, and C assets</li>
                 </ul>
-                <ul class="animate-slidein-right">
-                    <h3 style="font-size:1.1rem; color:#0B0B0B; margin-bottom:0.7rem;">How We Fit Into Your Ops</h3>
+                <ul class="animate-slidein-right" style="color: #fff;">
+                    <h3 style="font-size:1.1rem; margin-bottom:0.7rem;">How We Fit Into Your Ops</h3>
                     <li>We coordinate with ownership, not just leasing</li>
                     <li>Clean integration with existing SOPs</li>
                     <li>Guest experience, tech stack, and enforcement fully handled</li>
@@ -172,10 +172,10 @@
             </div>
         </section>
 
-        <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-slidein-down">Proven Results in Multifamily STR Performance</h2>
-            <div class="results-list animate-fadein-up">
-                <ul  >
+        <section class="section-tight" style="color: #fff;">
+            <h2 class="animate-slidein-down" style="color: #fff;">Proven Results in Multifamily STR Performance</h2>
+            <div class="results-list transparent-bg animate-fadein-up" style="background: transparent; box-shadow: none; padding: 2rem 2rem; max-width: 900px; margin-left: auto; margin-right: auto;">
+                <ul>
                     <li>20–35% NOI uplift per unit compared to long-term leases</li>
                     <li>80–90% average occupancy across stabilized STR units</li>
                     <li>100% guest compliance via automated rules and in-stay monitoring</li>
@@ -183,31 +183,31 @@
                     <li>0 onsite disruption reported across all managed properties</li>
                     <li>2% incident rate across hundreds of stays—fully insured and resolved in-house</li>
                 </ul>
-                <p style="margin-top:1rem; color:#8DA9C4;">
+                <p style="margin-top:1rem; color:#ccc;">
                     All metrics are tracked, summarized, and reported directly to your asset or operations team during the pilot.
                 </p>
             </div>
         </section>
 
-        <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-fadein">Our 60-Day Pilot Program</h2>
-            <div class="pilot-steps">
-                <div class="pilot-step animate-slidein-left">
+        <section class="section-tight" style="color: #fff;">
+            <h2 class="animate-fadein" style="color: #fff;">Our 60-Day Pilot Program</h2>
+            <div class="pilot-steps transparent-bg" style="background: transparent; box-shadow: none;">
+                <div class="pilot-step animate-slidein-left" style="background: rgba(255, 255, 255, 0.1); box-shadow: none; color: #000;">
                     <h4>Step 1 – Strategic Unit Selection</h4>
                     <p>We align with ownership to select units that make operational and financial sense.</p>
                 </div>
-                <div class="pilot-step animate-zoom">
+                <div class="pilot-step animate-zoom" style="background: rgba(255, 255, 255, 0.1); box-shadow: none; color: #000;">
                     <h4>Step 2 – Full-Service Launch</h4>
                     <p>We onboard within 15 days: listings, pricing, SOPs, guest support, cleaning, and tech.</p>
                 </div>
-                <div class="pilot-step animate-slidein-right">
+                <div class="pilot-step animate-slidein-right" style="background: rgba(255, 255, 255, 0.1); box-shadow: none; color: #000;">
                     <h4>Step 3 – Review Results</h4>
                     <p>You receive clear, scheduled financial reports covering revenue, occupancy, fees, and net payouts—delivered in a format your asset management team can act on. If the pilot performs, we scale. If not, you walk away—no obligation.</p>
                 </div>
             </div>
         </section>
 
-        <div class="cta-section animate-slidein-down">
+        <div class="cta-section animate-slidein-down" style="color: #fff;">
             <h2 style="font-size:1.3rem; margin-bottom:1rem;">Let's Talk Potential</h2>
             <a href="contact.html" class="btn">See What Your Underused Space Could Earn</a>
         </div>
