--- a/contact.html
+++ b/contact.html
@@ -23,23 +23,12 @@
         </nav>
     </header>
 
-    <main class="container contact-page">
-        <div class="map-container animate-zoom" style="width:100%;height:400px;margin-bottom:2rem;margin-top:2rem;">
-            <iframe
-            src="https://www.google.com/maps?q=9139+Wallisville+Rd,+Houston,+Texas,+77029&output=embed"
-            width="100%"
-            height="100%"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            title="Magnus &amp; Co. Location"
-            ></iframe>
-        </div>
-        <h1 class="animate-fadein-up">See What Your Property Could Do with the Right Operating Partner</h1>
-        <h2 class="animate-slidein-down">We work with landlords and multifamily teams looking to increase NOI through fully managed short-term rentals. If you’re exploring options, submit your info below and our team will follow up within one business day.</h2>
+    <main class="container contact-page bg-photo-overlay" style="background-image: url('images/IMG-20250711-WA0152.jpg');">
+       
+        <h1 class="animate-fadein-up" style="color: #fff;">See What Your Property Could Do with the Right Operating Partner</h1>
+        <h2 class="animate-slidein-down" style="color: #ddd;">We work with landlords and multifamily teams looking to increase NOI through fully managed short-term rentals. If you’re exploring options, submit your info below and our team will follow up within one business day.</h2>
 
-        <section class="inquiry-form animate-slidein-right">
+        <section class="inquiry-form animate-slidein-right transparent-bg">
             <h2>Inquiry Form</h2>
             <p>Share your details and we’ll reach out to schedule a brief consultation.</p>
             <form>
@@ -61,12 +50,24 @@
             </form>
         </section>
 
-        <section class="contact-direct animate-fadein-up">
+        <section class="contact-direct animate-fadein-up transparent-bg">
             <h2>Prefer to reach out directly?</h2>
             <p>📞 (832)-340-5243</p>
             <p>📩 <a href="mailto:abbas@magnus-property.com">abbas@magnus-property.com</a></p>
             <p>📍 9139 Wallisville Rd, Houston, Texas, 77029</p>
         </section>
+         <div class="map-container animate-zoom tight-margin" style="width:100%;height:400px;">
+            <iframe
+            src="https://www.google.com/maps?q=9139+Wallisville+Rd,+Houston,+Texas,+77029&output=embed"
+            width="100%"
+            height="100%"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Magnus &amp; Co. Location"
+            ></iframe>
+        </div>
     </main>
 
     <footer>
