--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <!-- Slider -->
         <div class="slider-container">
             <div class="slider-slide active "
-                 style="background-image: url('https://images.unsplash.com/photo-1507089947368-19c1da9775ae?auto=format&fit=crop&w=1470&q=80');">
+                 style="background-image: url('images/IMG-20250711-WA0147.jpg');">
                 <div class="slider-content ">
                     <h1>Professional Stays &amp; Consistent Returns</h1>
                     <p>Partner with Magnus &amp; Co. for fully managed short-term rentals.</p>
@@ -321,7 +321,7 @@
                 </div>
             </div>
             <div class="slider-slide "
-                 style="background-image: url('https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=1470&q=80');">
+                 style="background-image: url('images/IMG-20250711-WA0149.jpg');">
                 <div class="slider-content ">
                     <h1>See Results in 60 Days</h1>
                     <p>No cost, no commitment. Let the numbers speak for themselves.</p>
@@ -338,7 +338,7 @@
             <div class="grid-2x2">
                 <div class="animate-slidein-left">
                     <div class="img-block animate-zoom">
-                        <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80"
+                        <img src="images/IMG-20250711-WA0151.jpg"
                         alt="Landlords" />
                     </div>
                     <div class="solution-text" style="text-align:left;">
@@ -349,7 +349,7 @@
                 </div>
                 <div class="animate-slidein-right">
                     <div class="img-block animate-zoom">
-                        <img src="https://images.unsplash.com/photo-1503389152951-9c3d0c6b7a5a?auto=format&fit=crop&w=400&q=80"
+                        <img src="images/IMG-20250711-WA0150.jpg"
                         alt="Apartment Owners" />
                     </div>
                     <div class="solution-text" style="text-align:left;">
