--- a/Landlords.html
+++ b/Landlords.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <style>
         .landlord-hero {
-            background: url('https://images.unsplash.com/photo-1524758631624-e2822e304c36?auto=format&fit=crop&w=1200&q=80') center center/cover no-repeat;
+            background: url('images/IMG-20250711-WA0152.jpg') center center/cover no-repeat;
             min-height: 320px;
             position: relative;
             display: flex;
