--- a/index.html
+++ b/index.html
@@ -295,8 +295,10 @@
 
 <body>
     <header>
-        <nav class="container">
+        <nav class="container" style="width: 90%;">
             <div class="logo animate-fadein">
+                <img src="images/logo.png"
+                        alt="Magnus" />
                 <span>Magnus &amp; Co.®</span>
             </div>
             <ul class="animate-slidein-down">
